@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.joj.sk" name="joj.sk" provider-name="Maros Ondrasek" version="1.4.3">
+<addon id="plugin.video.joj.sk" name="joj.sk" provider-name="Maros Ondrasek" version="1.4.4">
   <requires>
     <import addon="xbmc.python" version="3.0.0" />
     <import addon="script.module.stream.resolver" version="1.6.24" />
@@ -15,7 +15,7 @@
     <description lang="cs">Sledujte online TV archiv ze serveru joj.sk</description>
     <description lang="sk">Sledujte online TV archív zo serveru joj.sk</description>
     <platform>all</platform>
-    <source>https://github.com/kodi-czsk/plugin.video.joj.sk</source>
+    <source>https://github.com/xbmc-kodi-czsk/plugin.video.joj.sk</source>
     <assets>
       <icon>icon.png</icon>
     </assets>
